PIRATE-3038  Fix layout issue of navigation widget in IE11

--- a/css/widget-navigation.less
+++ b/css/widget-navigation.less
@@ -109,7 +109,7 @@ div.widget.extendednavigation .extendednavigation ul.align-left, div.widget.exte
 			color: @color-swatch6;
 			// border-top: 1px solid darken(@color-swatch1, 7%);
 			// border-bottom: 1px solid darken(@color-swatch1, 7%);
-			display: inline-block;
+			display: block;
 			position: relative;
 			@media @tablet {
 				border: none;
